--- a/reactapp/src/GuideComponents/GuideNavbar.css
+++ b/reactapp/src/GuideComponents/GuideNavbar.css
@@ -41,7 +41,7 @@
     transform: scale(1.1);
 }
 
-
+/* Dropdown styling */
 .form-select {
     background-color:transparent; 
     border: transparent;
