--- a/reactapp/src/GuideComponents/GuideNavbar.css
+++ b/reactapp/src/GuideComponents/GuideNavbar.css
@@ -15,10 +15,10 @@
 .navbar-brand {
 
     color: #ffffff; 
-    font-size: 1.9rem;
+    font-weight: bold;
     font-family: "Noto Serif", serif;
     text-shadow: 1px 1px 2px #d9bf29; 
-    font-size: 2rem;
+    font-size: 3rem;
     text-shadow: 1px 1px 2px rgba(1.5, 0.5, 0.5, 0.5);
 }
 .navbar-brand:hover
