--- a/reactapp/src/TravellerComponents/TravellerViewPlace.css
+++ b/reactapp/src/TravellerComponents/TravellerViewPlace.css
@@ -1,28 +1,31 @@
-
 .container {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
-h1 {
+h3.available-places-heading {
   color: #343a40;
   font-weight: bold;
+  font-size: 1.5rem; /* Adjusted font size */
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px; /* Reduced margin for better spacing */
 }
 
+.search-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px; /* Added spacing below the search box */
+}
 
-input[type="text"] {
-  width: 100%;
+.search-input {
+  max-width: 400px;
   padding: 10px;
-  margin-bottom: 20px;
   border: 1px solid #ced4da;
   border-radius: 5px;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-
 
 table {
   width: 100%;
@@ -52,32 +55,3 @@ table th {
 table tbody tr:hover {
   background-color: #f1f1f1;
 }
-
-
-button {
-  margin: 5px;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-button:focus {
-  outline: none;
-}
-
-button.edit {
-  background-color: #007bff;
-  color: white;
-}
-
-button.delete {
-  background-color: #dc3545;
-  color: white;
-}
-
-  
